--- a/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
@@ -16,11 +16,16 @@ label.home: Home
 label.add: Agregar
 label.cancelar: Cancelar
 label.save: Guardar
+label.volver: Volver
+label.editar: Editar
+label.eliminar: Eliminar
 label.usuarios: Usuarios
+label.password.cambiar: Cambiar Password
 label.usuarios.admin: Administradores
 label.usuarios.coordinador: Coordinadores
 label.usuarios.profesor: Profesor
 label.usuarios.admin.new: Crear nuevo administrador
+label.usuarios.admin.show: Información de Administrador
 label.usuarios.admin.listar: Lista de Usuarios Administradores
 
 button.label.login: LOGIN
