Inicio inclusion de notas

--- a/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
@@ -198,6 +198,8 @@ label.reports.routes: Reporte de rutas
 label.reports.routes_zones: Reporte de rutas
 label.reports.routes_zones.message:
 
+label.qualifications: Calificaciones
+
 results.not.found: No se han encontrado resultados.
 
 usuarios.estado.1: Activo
