--- a/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
@@ -200,6 +200,8 @@ label.reports.routes_zones.message:
 
 label.qualifications: Calificaciones
 
+label.absence.show: Informacion de Ausencia
+
 results.not.found: No se han encontrado resultados.
 
 usuarios.estado.1: Activo
