--- a/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
@@ -293,6 +293,15 @@ friday: Viernes
 saturday: Sabado
 sunday: Domingo
 
+
+label.ticket1: El alumno
+label.ticket2: Fue retirado de la institución por
+label.ticket3: El día
+label.ticket4: Boleta de Salida
+label.ticket5a: ______________________________
+label.ticket5: Firma Saint Michael School
+label.ticket6: Firma del Encargado
+
 #################     TEACHER     #################
 label.usuarios.courseEntry: Rubros
 title.course.entries.by.group: Definicion de Rubros por Grupo
