View relative info

--- a/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
@@ -260,6 +260,8 @@ label.route.type.2: Club
 
 label.current.period: Periodo Actual
 
+menu.qualifications.report: Notas de Periodo
+
 results.not.found: No se han encontrado resultados.
 
 messages.confirmation.remove.relative: Esta seguro que desea desasociar este contacto?
