Restringir edicion de datos en teacher si periodo no editable

--- a/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
@@ -273,6 +273,7 @@ label.maxEntry: Nota Maxima
 label.route.type.1: Normal
 label.route.type.2: Club
 
+label.editable: Editable
 label.current.period: Periodo Actual
 label.courseEntryCode: C&oacute;digo de Rubro
 
