--- a/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
@@ -239,6 +239,7 @@ label.students.precenses: Estudiantes Presentes
 label.routes.club: Rutas Club
 label.students.by.route.club: Estudiantes por Ruta Clubes
 label.student.route: Transporte
+label.report.grades.by.group.course: Notas de Grupo por Materia
 
 label.penalties: Sanciones
 label.penalties.title: Administracion de Sanciones
