--- a/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
@@ -333,7 +333,7 @@ label.ticket2: Fue retirado de la institución por
 label.ticket3: Fecha:
 label.ticket4: Boleta de Salida
 label.ticket5a: ______________________________
-label.ticket5: Firma Saint Michael School
+label.ticket5: Firma
 label.ticket6: Firma del Encargado
 label.ticketnota: Importante:  Que sea de su conocimiento que se impartirá materia nueva durante el transcurso de los exámenes, por ende es responsabilidad tanto del estudiante como del padre de familia en ponerse al día con dicha materia.
 
