Allows to create custom questionnaires

--- a/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
@@ -22,6 +22,7 @@ label.add: Agregar
 label.cancelar: Cancelar
 label.save: Guardar
 label.view: Ver
+label.psico: Perfil Psicologico
 label.volver: Volver
 label.edit: Editar
 label.delete: Eliminar
