--- a/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
@@ -255,6 +255,8 @@ label.penalty.show: Mostrar Sancion
 label.reports.routes.by.zone: Reporte de Rutas por Zona
 label.reports.students.by.route: Reporte de Estudiantes por Ruta
 label.reports.absences.by.route: Reporte de Estudiantes Ausentes por Ruta
+label.students.by.route.club.level: Reporte Estudiantes en club por dia
+label.students.by.route.club.route: Reporte Estudiantes rutas club por dia
 
 label.reports.routes.club: Reporte de rutas de Clubes
 
@@ -343,6 +345,19 @@ title.course.entries.by.group: Definicion de Rubros por Grupo
 title.qualifications.by.group: Ingreso de calificaciones por grupo
 label.subentries.by.course: Subrubros
 label.usuarios.observations: Observaciones
+
+######Inventary#######
+label.inventary: Inventario
+label.items: Articulos
+label.categoryitems: Categorias
+label.item.listar: Listado de Inventario
+label.category_item.listar: Categorias de Articulos
+label.category_item.new: Nueva categoria
+label.item.new: Nuevo articulo
+label.item.show: Mostrar articulo
+label.category.show: Mostrar categoria
+label.category: Categoria
+label.user: Encargado
 
 #Validation
 not.blank.name: Probando proband.
